# tile-paint

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: ALGORITHM.md  ARCHITECTURE.md  PARAMS.md  brushes.md
examples/: minimal_run.md
src/: main.py
src/painter/: __init__.py  __main__.py  config.py  pipeline.py
src/painter/cli/: __main__.py
src/painter/config/: config.py
src/painter/core/: pipeline.py
src/painter/imagemath/: image_math.py
src/painter/io/: files.py
src/painter/logger/: logger.py
src/painter/strokes/: brush_ops.py  geometry.py  roi_selection.py  sizes.py  stroke_engine.py
src/painter/video/: recorder.py  speed_ramp.py
tests/: conftest.py  test_imagemath.py  test_roi_selection.py  test_sizes.py  test_smoke.py  test_speed_ramp.py
