[project]
name = "tile-paint"
version = "0.0.0"
description = "Stroke-based image reconstruction (coarse→fine) with optional video"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  ".venv",
  "venv",
  "dist",
  "build",
  "outputs",
  "assets/input",
]
lint.select = ["E", "F", "W", "I", "UP", "PERF", "PIE", "COM"]
lint.ignore = [
  "E501",
  "COM812",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["src/painter"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-q"
